# pensine

./: .gitignore  ChangeLog.md  Makefile  README.md  package.yaml  pensine.opam
app/: Main.hs  dune  main.ml
src/: JsonLoader.hs  Knowledge.hs
src/json-storage/: dune  loader.ml
src/knowledge/: dune  thought.ml
test/: JsonLoaderSpec.hs
test/json-storage/: dune  test_json_storage.ml  test_loader.ml
